Fix: modal would move contento to left on mobile.

--- a/events/static/events/main.css
+++ b/events/static/events/main.css
@@ -85,6 +85,7 @@ Possible color palette
 nav {
     background-color: var(--navbar-bg-color);
     transition: background-color 1s ease;
+    margin: .5rem;
 }
 
 .cursor-pointer {
@@ -202,7 +203,6 @@ body {
     background: var(--body-background);
     background-repeat: no-repeat;
     background-size: cover;
-    padding: .5em;
     min-height: 100vh;
     transition: background-color 2s ease;
     overflow-x: hidden;
@@ -221,7 +221,7 @@ body {
     height: 120%;
     top: -10%;
     left: -50%;
-    z-index: -1;
+    /* z-index: -1; */
     background-color: var(--title-bg-color);
     transition: .5s ease-in;
     border-radius: .5rem;
@@ -263,6 +263,10 @@ input, .form-control, input:focus, .form-control:focus {
     color: var(--color);
     border-color: transparent;
     background-color: var(--input-bg-color);
+}
+
+.modal-open {
+    padding-right: 0 !important;
 }
 
 .modal div {
